--- a/css/todo.css
+++ b/css/todo.css
@@ -1,44 +1,88 @@
-.todo-list, .todo-input-grid {
-    display: grid;
-    grid-template-columns: 1.5fr 0.8fr 0.5fr;
-    column-gap: 10px;
-    row-gap: 10px;
-    align-items: center;
-    margin: 0.5em;
-  }
-  
-  .todo-input-grid {
-    margin-bottom: 0.8em;
-    align-items: stretch;
-  }
-  
-  .todo-item{
-    margin-left: 0.4em;
-    font-size: 0.9em;
-  }
+.todo-container {
+  width: 100%;
+  height: 65%;
+  background-color: #e7e7e7;
+  border-radius: 2%;
+}
 
-  .todo-name,
-  .todo-date {
-    font-size: 15px;
-    padding: 6px;
-  }
-  
-  .todo-add {
-    background-color: rgb(180, 241, 180);
-    color: white;
-    border: none;
-    font-size: 0.9em;
-    border-radius: 0.6em;
-    cursor: pointer;
-    padding: 0.5em;
-  }
-  
-  .todo-del {
-    background-color: rgb(255, 145, 145);
-    color: white;
-    border: none;
-    border-radius: 0.6em;
-    font-size: 0.9em;
-    cursor: pointer;
-    padding: 0.5em;
-  }
+.inputs {
+  padding: 0.5em;
+  border-radius: 0.75rem;
+  border: 0.09375rem solid #d4d4d4;
+  outline: none;
+  transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+  box-shadow: 0 0 1.25rem -1.125rem;
+}
+
+.inputs:active {
+  transform: scale(0.97);
+}
+
+.todo-list,
+.todo-input-grid {
+  display: grid;
+  grid-template-columns: 1.5fr 0.8fr 0.5fr;
+  column-gap: 10px;
+  row-gap: 10px;
+  align-items: center;
+  margin: 0.5em;
+}
+
+.todo-input-grid {
+  margin-bottom: 0.8em;
+  align-items: stretch;
+}
+
+.todo-item {
+  margin-left: 0.4em;
+  font-size: 0.9em;
+}
+
+.todo-name,
+.todo-date {
+  font-size: 15px;
+  padding: 6px;
+}
+
+.todo-add {
+  background-color: rgb(180, 241, 180);
+  color: white;
+  border: none;
+  font-size: 0.9em;
+  border-radius: 0.6em;
+  cursor: pointer;
+  padding: 0.5em;
+}
+
+
+.todo-status-delete {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.todo-trash-icon {
+  object-fit: cover;
+  width: 100%;
+}
+.todo-del, .todo-status {
+  border: none;
+  border-radius: 0.6em;
+  font-size: 0.9em;
+  cursor: pointer;
+  padding: 0.5em;
+  aspect-ratio: 1/1;
+  border-radius: 100%;
+  width: 2em;
+  height: 2em;
+}
+
+
+
+.todo-status{
+  background-color:  rgb(255, 145, 145);
+}
+
+.todo-del{
+  background-color:  rgb(255, 145, 145);
+}
