--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@
 .weather-time-container {
     width: 100%;
     height: 35%;
-    background-color: #ff0000;
+    background-color: #b4b4b4;
     border-radius: 3%;
 }
 
