feat: added weather icon, simplified some js, fixed bugs with todo

--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,15 @@
-:root{
+:root {
     font-family: Montserrat;
     font-size: 16px;
 }
+
+body {
+    background-color: #E0E5EC;
+}
+
 .main-container {
-    width: 80%;
-    min-width: 50.75em;
-    height: 80vh;
     box-sizing: content-box;
-    margin: 8vh auto 0 auto;
+    margin: 10vh auto 0 auto;
     display: flex;
     flex-direction: row;
 }
@@ -15,12 +17,13 @@
 .notes-container {
     width: 50%;
     height: 100%;
-    background-color: #f5f5f5;
-    border-radius: 2%;
+    border-radius: 1%;
+    background-color: #E0E5EC;
+    box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
 }
 
 .weather-time-todo-container {
-    width: 50%; 
+    width: 50%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -29,7 +32,30 @@
 .weather-time-container {
     width: 100%;
     height: 35%;
-    background-color: #b4b4b4;
-    border-radius: 3%;
+    background-color: #E0E5EC;
+    box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
+    border-radius: 1%;
+    display: flex;
+    flex-direction: column-reverse;
 }
 
+.todo-container {
+    width: 100%;
+    height: 65%;
+    background-color: #E0E5EC;
+    box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
+    border-radius: 2%;
+  }
+
+.inputs {
+    padding: 0.5em;
+    border-radius: 0.75rem;
+    border: 0.09375rem solid #d4d4d4;
+    outline: none;
+    transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+    box-shadow: 0 0 1.25rem -1.125rem;
+}
+
+.inputs:active {
+    transform: scale(0.97);
+}
