--- a/css/todo.css
+++ b/css/todo.css
@@ -1,23 +1,3 @@
-.todo-container {
-  width: 100%;
-  height: 65%;
-  background-color: #e7e7e7;
-  border-radius: 2%;
-}
-
-.inputs {
-  padding: 0.5em;
-  border-radius: 0.75rem;
-  border: 0.09375rem solid #d4d4d4;
-  outline: none;
-  transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
-  box-shadow: 0 0 1.25rem -1.125rem;
-}
-
-.inputs:active {
-  transform: scale(0.97);
-}
-
 .todo-list,
 .todo-input-grid {
   grid-template-columns: 1.5fr 0.8fr 0.3fr;
@@ -40,12 +20,13 @@
 
 .todo-name,
 .todo-date {
-  font-size: 15px;
-  padding: 6px;
+  padding: 0.4em;
+  background-color: #E0E5EC;
+  box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
 }
 
 .todo-add {
-  background-color: rgb(145, 255, 145);
+  background-color: rgb(135, 192, 149);
   color: white;
   border: none;
   font-size: 0.9em;
@@ -53,6 +34,7 @@
   cursor: pointer;
   padding: 0.5em;
   width: 100%;
+  box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
 }
 
 
@@ -66,8 +48,9 @@
   object-fit: cover;
   height: 100%;
 }
-.todo-del{
-  background-color:  rgb(255, 145, 145);
+
+.todo-del {
+  background-color: rgb(255, 128, 171);
   color: white;
   border: none;
   height: 2em;
@@ -76,7 +59,9 @@
   cursor: pointer;
   padding: 0.5em;
   width: 100%;
+  box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
 }
+
 .todo-status {
   border: none;
   border-radius: 0.6em;
@@ -89,14 +74,14 @@
   height: 2em;
 }
 
-
-
-.todo-status-not-started{
-  background-color:  rgb(255, 145, 145);
+.todo-status-not-started {
+  background-color: rgb(255, 128, 171);
 }
-.todo-status-in-progress{
-  background-color:  rgb(255, 255, 145);
+
+.todo-status-in-progress {
+  background-color: rgb(255, 204, 102);
 }
-.todo-status-completed{
-  background-color:  rgb(145, 255, 145);
+
+.todo-status-completed {
+  background-color: rgb(135, 192, 149);
 }
