--- a/css/todo.css
+++ b/css/todo.css
@@ -27,7 +27,7 @@
 
 .todo-add {
   background-color: rgb(135, 192, 149);
-  color: white;
+  color: rgb(0, 0, 0);
   border: none;
   font-size: 0.9em;
   border-radius: 0.6em;
