--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,10 @@ body {
     border-radius: 1%;
     background-color: #E0E5EC;
     box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .weather-time-todo-container {
