--- a/css/main.css
+++ b/css/main.css
@@ -1,25 +1,32 @@
 :root {
     font-family: Montserrat;
-    font-size: 16px;
+    font-size: 16px;    
+    --border-radius: 1vw;
 }
 
 body {
     background-color: #E0E5EC;
 }
-
+main{
+    margin-top: 40vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 .main-container {
     box-sizing: content-box;
-    margin: 10vh auto 0 auto;
+    margin: 1em auto 0 auto;
     display: flex;
     flex-direction: row;
-    max-width: 54.4em;
-    min-width: 38.8em;
+    max-width: 55.4em;
+    min-width: 37.8em;
 }
 
 .notes-container {
     width: 50%;
     height: 100%;
-    border-radius: 1%;
+    border-radius: 1vw;
     background-color: #E0E5EC;
     box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
     display: flex;
@@ -29,20 +36,22 @@ body {
 }
 
 .weather-time-todo-container {
-    width: 50%;
+    width: calc(50% - 1em);
     height: 100%;
     display: flex;
     flex-direction: column;
+    margin-left: 1em;
 }
 
 .weather-time-container {
     width: 100%;
-    height: 35%;
+    height: calc(35% - 1em);
     background-color: #E0E5EC;
     box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
-    border-radius: 1%;
+    border-radius: 1vw;
     display: flex;
     flex-direction: column-reverse;
+    margin-bottom: 1em;
 }
 
 .todo-container {
@@ -50,7 +59,7 @@ body {
     height: 65%;
     background-color: #E0E5EC;
     box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
-    border-radius: 2%;
+    border-radius: 1vw;
   }
 
 
