--- a/css/notes.css
+++ b/css/notes.css
@@ -1,20 +1,22 @@
 .notes-toolbar {
     height: 3%;
-    width: 94%;
+    width: 90%;
     font-size: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0.5em;
+    margin-top: 0.5em;
     border-radius: 0.75rem;
     outline: none;
     box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
+    z-index: 200;
 }
 
 .text-input {
     width: 94%;
     margin-top: 1%;
-    height: 87%;
+    height: 90%;
     background-color: #E0E5EC;
     font-size: 100%;
     padding: 0.5em;
