--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 :root {
     font-family: Montserrat;
     font-size: 16px;    
-    --border-radius: 1vw;
+    --border-radius: 1vh;
 }
 
 body {
@@ -26,7 +26,7 @@ main{
 .notes-container {
     width: 50%;
     height: 100%;
-    border-radius: 1vw;
+    border-radius: 1vh;
     background-color: #E0E5EC;
     box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
     display: flex;
@@ -48,7 +48,7 @@ main{
     height: calc(35% - 1em);
     background-color: #E0E5EC;
     box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
-    border-radius: 1vw;
+    border-radius: 1vh;
     display: flex;
     flex-direction: column-reverse;
     margin-bottom: 1em;
@@ -59,7 +59,7 @@ main{
     height: 65%;
     background-color: #E0E5EC;
     box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
-    border-radius: 1vw;
+    border-radius: 1vh;
   }
 
 
