--- a/css/clock.css
+++ b/css/clock.css
@@ -6,7 +6,7 @@
 .clock{
     height: 8em;
     width: 8em;
-    margin: 0.6em;
+    margin: var(--margin-todo-weather);
     background-color: rgba(255,255,255,0.06);
     -webkit-backdrop-filter: blur(1em);
             backdrop-filter: blur(1em);
