--- a/css/notes.css
+++ b/css/notes.css
@@ -6,7 +6,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0.5em;
-    margin-top: 0.5em;
+    margin: var(--margin-grids) var(--margin-todo-weather);
     border-radius: 0.75rem;
     outline: none;
     box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
@@ -14,7 +14,7 @@
 }
 
 .text-input {
-    width: 94%;
+    width: calc(100% - var(--margin-grids)*2 - 0.3em);
     margin-top: 1%;
     height: 90%;
     background-color: #E0E5EC;
