--- a/css/search.css
+++ b/css/search.css
@@ -4,10 +4,12 @@
     border-radius: var(--border-radius);
     box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
 }
-.i{
+
+.i {
     max-width: 55.4em;
     min-width: 37.8em;
 }
+
 .i-container {
     display: flex;
 }
@@ -19,13 +21,46 @@
     align-items: center;
     justify-content: center;
     border-radius: var(--border-radius);
+    border: none;
+    transition: all 0.3s ease-in-out; 
+    background-color: #E0E5EC;
     margin-right: 12px;
-    box-shadow:
-        -2px -2px 6px rgba(#fff, .6),
-        2px 2px 12px #c8d8e7;
 
     svg {
         transform: translate(-1px, -1px);
+    }
+
+    --top-shadow: inset 1px 1px 3px #c5d4e3,
+    inset 2px 2px 6px #c5d4e3;
+    --bottom-shadow: inset -2px -2px 4px rgba(255, 255, 255, .7);
+    position: relative;
+    border-radius: var(--border-radius);
+    overflow: hidden;
+
+    &:before,
+    &:after {
+        left: 0;
+        top: 0;
+        display: block;
+        content: "";
+        pointer-events: none;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+    }
+
+    &:before {
+        box-shadow: var(--bottom-shadow);
+    }
+
+    &:after {
+        box-shadow: var(--top-shadow);
+        transition: box-shadow 0.3s ease-in-out;
+    }
+
+    &:hover {
+        --top-shadow: inset 2px 2px 6px #c5d4e3, inset 4px 4px 12px #c5d4e3;
+        --bottom-shadow: inset -4px -4px 8px rgba(255, 255, 255, .7);
     }
 }
 
@@ -51,7 +86,7 @@
     width: 100%;
 
     &::placeholder {
-        color: #6d7f8f;
+        color: #bfc7ce;
     }
 
     &:focus {
